#3 css 조정 및 텍스트 수정

--- a/src/components/Introduce/Intro.scss
+++ b/src/components/Introduce/Intro.scss
@@ -25,7 +25,7 @@ a {
     }
 
     .poly {
-      animation: titleAnimation 3s ease;
+      animation: titleAnimation 3s ease infinite;
     }
 
     .Hello {
