--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -12,7 +12,8 @@ header {
   padding: 0 2%;
   font-size: 18px;
   font-weight: 600;
-  color: white;
+  color: orange;
+  // background-color: rgba($color: white, $alpha: 0.9);
   z-index: 99;
   animation: HeaderAni 2s ease-out;
 
