--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
   text-align: center;
-  background-color: #1e90ff;
+
 }
 
 .App-logo {
@@ -9,3 +9,17 @@
 }
 
 
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+/* 스크롤바의 track 색상 */
+::-webkit-scrollbar-track {
+  background-color:  #0a192f;
+}
+
+/* 스크롤바의 thumb(드래그 가능한 부분) 색상 */
+::-webkit-scrollbar-thumb {
+  background-color: #1965fe;
+  border-radius: 5px;
+}
