--- a/src/components/about/About.scss
+++ b/src/components/about/About.scss
@@ -1,10 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Gamja+Flower&family=Hi+Melody&display=swap');
+
+$pc: 1300px;
+
 .aboutAnimation {
   animation: aboutAnimation 1s ease-in-out;
 }
 
 .About-box {
-  width: 90%;
-  height: 500px;
+  max-width: 1024px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -17,51 +20,87 @@
 
   .About-Grid {
     box-sizing: border-box;
-    padding: 0 30px;
-    height: 220px;
-    display: grid;
-    grid-template-columns: 2fr 220px;
-    grid-template-rows: 220px 100px;
+    margin: 0 auto;
+    // display: grid;
+    // grid-template-columns: 300px 200px;
+    // grid-template-rows: auto auto;
+
+    p {
+      font-size: 1.2em;
+      word-spacing: 1px;
+      font-weight: bold;
+    }
 
     .About-text {
       display: flex;
       flex-direction: column;
       justify-content: center;
-
-      p {
-        font-size: 1.2em;
-        font-weight: bold;
-        word-spacing: 1px;
-      }
     }
 
     .About-photo {
-      grid-row-end: span 1;
+      // grid-row-end: span 1;
 
       img {
-        width: 220px;
-        height: 220px;
+        width: 200px;
+        height: 200px;
+      }
+    }
+
+    .About-text1 {
+      // grid-column-end: span 2;
+      text-align: left;
+      margin-bottom: 50px;
+
+      .text-title1 {
+        border-bottom: 3px solid orange;
+        margin-bottom: 20px;
+
+        h3 {
+          text-align: left;
+          padding: 0 10px 20px;
+          font-size: 2em;
+        }
       }
     }
 
     .About-info {
-      grid-column-end: span 2;
-      padding: 0 5%;
-      width: 80%;
-      text-align: center;
+      // grid-column-end: span 3;
+      font-family: 'Gamja Flower', cursive;
+      font-weight: bold;
+
+      h3 {
+        text-align: left;
+        padding: 0 10px 10px;
+        font-size: 2em;
+        border-bottom: 3px solid orange;
+        margin-bottom: 30px;
+      }
 
       ul {
-        display: flex;
         text-decoration: none;
-        align-items: center;
         list-style: none;
-        height: 40px;
 
         li {
-          width: 25%;
-          height: 100%;
-          text-align: center;
-          
+          height: 40px;
+          display: flex;
+          align-items: center;
+          margin-bottom: 10px;
+
+          img {
+            margin-right: 15px;
+          }
+
+          svg {
+            margin-right: 15px;
+          }
+
+          a {
+            font-size: 1.3em;
+          }
+
+          span {
+            font-size: 1.3em;
+          }
         }
       }
     }
@@ -78,4 +117,7 @@
     opacity: 1;
     transform: translateY(0);
   }
+}
+
+@media (max-width: 720px) {
 }
