--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #1e90ff;
+  background-color: #0a192f;
+  /* background-color: #1e90ff; */
 }
 
 code {
