--- a/src/components/Introduce/Intro.scss
+++ b/src/components/Introduce/Intro.scss
@@ -6,22 +6,25 @@ a {
 }
 
 .Intro-box {
+  position: relative;
   display: flex;
+  overflow: hidden;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
-  height: 100vh;
+  height: 2500px;
+  background-color: white;
+  color: #0a192f;
 
   h2 {
-    display: flex;
-    flex-direction: column;
+    top: calc(40vh - 40px);
+    width: 100%;
+    line-height: 80px;
+
 
     span {
-      height: 80px;
-      font-size: 50px;
+      font-size: 80px;
       letter-spacing: 1px;
-      text-shadow: $shadow 1px 1px, $shadow 3px 3px, $shadow 5px 5px,
-        $shadow 4px 4px;
+
     }
 
     .poly {
@@ -31,7 +34,9 @@ a {
     .Hello {
       padding-bottom: 150px;
       font-size: 70px;
-      animation: helloAnimation 2s linear infinite;
+      // animation: helloAnimation 2s linear infinite;
+      text-shadow: $shadow 1px 1px, $shadow 3px 3px, $shadow 5px 5px,
+      $shadow 4px 4px;
     }
   }
 }
