--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -13,6 +13,14 @@
   min-height: 800px;
   display: flex;
   justify-content: center;
+  align-items: center;
+  position: relative;
+
+  h3 {
+    position: absolute;
+    top: 60px;
+    font-size: 2.5rem;
+  }
 
   .Project {
     position: relative;
