--- a/src/components/Skill/Skills.scss
+++ b/src/components/Skill/Skills.scss
@@ -13,31 +13,25 @@
 
   .Skills {
     display: flex;
-    // justify-content: space-evenly;
+    overflow: hidden;
     width: 100%;
     height: 100%;
+    position: relative;
 
     div {
-      width: 100px;
-      height: 100px;
+      width: 300px;
+      height: 300px;
       background-color: rgb(251, 251, 251);
-      // border-radius: 10px;
+      position: absolute;
       transform: translate(500px, 100px);
-      transition: all 1s linear;
+      transition: all .2s linear;
+      left: calc();
+
       h3 {
         padding: 10px 0;
         color: #333;
       }
-    }
-
-    .MarkUp {
-      // transform: translate(500px, 100px);
-      // transition: all 0.2s linear;
-    }
-
-    .Language {
-      transform: translate(300px, -150px);
-    }
+    }    
   }
 }
 
