--- a/src/components/Introduce/Intro.scss
+++ b/src/components/Introduce/Intro.scss
@@ -6,37 +6,41 @@ a {
 }
 
 .Intro-box {
-  position: relative;
   display: flex;
   overflow: hidden;
   flex-direction: column;
-  justify-content: center;
-  height: 2500px;
+  // justify-content: center;
+  height: 100vh;
   background-color: white;
   color: #0a192f;
 
-  h2 {
-    top: calc(40vh - 40px);
+  .Intro-box1 {
+    background-color: inherit;
+    position: fixed;
+    height: 100%;
     width: 100%;
-    line-height: 80px;
+    z-index: 20;
 
+    h2 {
+      top: calc(40vh - 40px);
+      left: calc((100vw - 700px) / 2);
+      width: 700px;
 
-    span {
-      font-size: 80px;
-      letter-spacing: 1px;
+      span {
+        width: 100%;
+        height: 100%;
+        letter-spacing: 1px;
+        font-size: 120px;
+      }
 
-    }
+      // .poly {
+      //   animation: titleAnimation 3s ease infinite;
+      // }
 
-    .poly {
-      animation: titleAnimation 3s ease infinite;
-    }
-
-    .Hello {
-      padding-bottom: 150px;
-      font-size: 70px;
-      // animation: helloAnimation 2s linear infinite;
-      text-shadow: $shadow 1px 1px, $shadow 3px 3px, $shadow 5px 5px,
-      $shadow 4px 4px;
+      .Hello {
+        text-shadow: $shadow 1px 1px, $shadow 3px 3px, $shadow 5px 5px,
+          $shadow 4px 4px;
+      }
     }
   }
 }
