--- a/src/components/Skill/Skills.scss
+++ b/src/components/Skill/Skills.scss
@@ -9,9 +9,24 @@
   }
 }
 
+@keyframes flip-animae {
+  100% {
+    transform: rotateY(180deg);
+  }
+}
+
+@keyframes non-animae {
+  0% {
+    transform: rotateY(180deg);
+  }
+
+  100% {
+    transform: rotateY(360deg);
+  }
+}
+
 .Skills-box {
   margin-top: 100px;
-  padding-bottom: 50px;
 
   .Skill-title {
     font-size: 2em;
@@ -35,21 +50,25 @@
     row-gap: 25px;
     overflow: hidden;
     position: relative;
+    transform-style: preserve-3d;
+    -webkit-perspective: 1100px;
+    perspective: 1100px;
 
     li {
-      // border-radius: 10px;
-      // color: green;
-      // border: 3px solid green;
       display: block;
       height: 300px;
       background-color: #112240;
       text-align: left;
+      backface-visibility: hidden;
+      transition: all 1s linear;
+      // border-radius: 10px;
+      // color: green;
+      // border: 3px solid green;
       // width: 300px;
       // height: 300px;
       // background-color: rgb(251, 251, 251);
       // position: absolute;
       // transform: translate(500px, 100px);
-      // transition: all 0.2s linear;
       // left: calc();
 
       div {
@@ -65,8 +84,14 @@
           letter-spacing: 1px;
         }
       }
-
-     
+    }
+    .front {
+      // transform: rotateY(180deg);
+      // animation: flip-animae 1s linear forwards;
+    }
+    .back {
+      transform: rotateY(180deg);
+      // animation: non-animae 1s linear forwards;
     }
   }
 }
@@ -86,6 +111,7 @@
       min-width: 300px;
       width: 70%;
       display: block;
+      padding: 0  ;
 
       li {
         margin-bottom: 50px;
