--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #0a192f;
-  /* background-color: #1e90ff; */
+  overflow-x: hidden;
+  /* cursor: none; */
 }
 
 code {
