#9 Contact 컴포넌트 생성 및 main, Root 컴포넌트 삭제

--- a/src/App.scss
+++ b/src/App.scss
@@ -28,4 +28,11 @@ li {
   list-style: none;
 }
 
-
+.Main-box {
+  width: 100%;
+  min-height: 100vh;
+  color: white;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
