--- a/src/components/contact/Contact.scss
+++ b/src/components/contact/Contact.scss
@@ -8,31 +8,126 @@
     $lightness: 0%,
     $alpha: 1
   );
+  color: white;
 
   .contact-box {
     margin: auto;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
-    width: 90%;
-    height: 90%;
+    width: 100%;
+    max-width: 700px;
+    height: 100%;
 
-    h3 {
+    h2 {
+      text-align: left;
       height: 100px;
       line-height: 100px;
       font-size: 30px;
     }
 
-    .contact-text {
-      text-align: center;
-      width: 100%;
-      height: 60px;
-      padding: 10px 0;
-      font-size: 24px;
-      line-height: 60px;
-      //font 수정 바람!!!!!!!
+    input,
+    textarea {
+      font-size: 18px;
+      background-color: transparent;
+      &::placeholder {
+        color: rgb(183, 183, 183);
+      }
+
+      &:focus {
+        outline: none;
+      }
     }
+
+    input {
+      border: 1px solid white;
+      border-radius: 5px;
+    }
+
+    form {
+      position: relative;
+      width: 100%;
+      height: 600px;
+
+
+      article {
+        text-align: left;
+        font-size: 16px;
+        margin-bottom: 10px;
+      }
+
+      .contact-name,
+      .contact-email {
+        position: relative;
+        padding: 20px 0;
+        align-content: left;
+
+        input {
+          box-sizing: border-box;
+          width: 100%;
+          height: 45px;
+          padding: 10px 20px;
+          color: white;
+        }
+
+        div {
+          position: absolute;
+          width: 100%;
+          height: 30px;
+          font-size: 16px;
+          line-height: 30px;
+          text-align: left;
+          color: rgb(74, 231, 90);
+        }
+      }
+
+      .contact-text {
+        position: relative;
+        box-sizing: border-box;
+        padding: 20px 20px 35px;
+        margin-top: 20px;
+        height: 300px;
+        border: 1px solid white;
+
+        textarea {
+          width: 100%;
+          height: 100%;
+          color: white;
+          resize: none;
+          overflow-y: scroll;
+          border: none;
+        }
+
+        div {
+          position: absolute;
+          right: 20px;
+          bottom: 5px;
+          width: auto;
+          height: 30px;
+          font-size: 16px;
+          line-height: 30px;
+          color: white;
+        }
+      }
+
+      button {
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        margin: 20px 0;
+        width: 200px;
+        height: 50px;
+        border: 1px solid blue;
+        background-color: blue;
+        border-radius: 10px;
+        color: white;
+        font-size: 18px;
+
+        &:focus {
+          outline: none;
+        }
+      }
+    } //form
 
     .icons {
       margin-top: 80px;
@@ -45,6 +140,6 @@
         margin: 0 20px;
         font-size: 30px;
       }
-    }
-  }
+    } // icons
+  } //contact-box
 }
